--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "_hugo/site/themes/hugo-classic"]
 	path = _hugo/site/themes/hugo-classic
-	url = git@github.com:goodroot/hugo-classic.git
+	url = https://github.com/goodroot/hugo-classic.git
